<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.universo.futeboldasgalaxias.GruposCadastroActivity">

    <LinearLayout
            android:id="@+id/linearLayoutDadosGrupo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

        <TextView
                android:id="@+id/textViewDadosGrupo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:text="@string/dados_do_grupo"/>

        <View
                android:id="@+id/Divisor1"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/textViewDadosGrupo"
                android:background="#A8A8A8"/>

        <EditText
                android:id="@+id/editTextGrupoNome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Divisor1"
                android:hint="@string/nome_"
                android:inputType="textPersonName|textCapWords">

            <requestFocus/>
        </EditText>

        <EditText
                android:id="@+id/editTextGrupoDescricao"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editTextGrupoNome"
                android:hint="@string/descricao_"
                android:inputType="textMultiLine"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearLayoutConfigGrupo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linearLayoutDadosGrupo"
            android:orientation="vertical"
            android:paddingTop="10sp">

        <TextView
                android:id="@+id/textViewQtdGols"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:text="@string/configuracoes_de_partida"/>

        <View
                android:id="@+id/Divisor2"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/textViewQtdGols"
                android:background="#A8A8A8"/>

        <LinearLayout
                android:id="@+id/linearLayoutOpenDialogGolsPorPartida"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5sp"
                android:clickable="true"
                android:orientation="vertical"
                android:paddingTop="5sp">

            <TextView
                    android:id="@+id/textViewQtdGolss"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quantidade_de_gols"/>

            <TextView
                    android:id="@+id/textViewGolsPartida"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewQtdGolss"
                    android:hint="2 Gol(s) por Partida"
                    android:text="2 Gol(s) por Partida"
                    android:textSize="11sp"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayoutOpenDialogTempoPartida"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5sp"
                android:clickable="true"
                android:orientation="vertical"
                android:paddingTop="5sp">

            <View
                    android:id="@+id/Divisor3"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#9999"/>

            <TextView
                    android:id="@+id/textViewTempoDuracao"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Divisor3"
                    android:layout_marginTop="5sp"
                    android:text="@string/tempo_de_duracao_de_partida"/>

            <TextView
                    android:id="@+id/textViewTempoPartida"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewTempoDuracao"
                    android:hint="10 Min(s) por Partida"
                    android:text="10 Min(s) por Partida"
                    android:textSize="11sp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>